--- a/Milvus.ipynb
+++ b/Milvus.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'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'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import weaviate"
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv()\n",
+    "\n",
+    "WeaviateUrl = os.getenv(\"weaviate_URL\")\n",
+    "WeaviateAPI = os.getenv(\"weaviate_API\")\n",
+    "HuggingFaceAPI = os.getenv(\"HuggingFace_API\")\n",
+    "\n"
    ]
   },
   {
@@ -19,8 +37,8 @@
     "import os\n",
     "  \n",
     "# Set these environment variables\n",
-    "URL = \"https://lkxmydpqwgdtck8d7uwow.c0.us-west3.gcp.weaviate.cloud\"\n",
-    "APIKEY = \"oVbnxSec77WJDRoNTlRvC0Z21oFQsnKz274g\"\n",
+    "URL = WeaviateUrl\n",
+    "APIKEY = WeaviateAPI\n",
     "  \n",
     "# Connect to a WCS instance\n",
     "client = weaviate.connect_to_wcs(\n",
@@ -37,7 +55,7 @@
     "import weaviate\n",
     "from weaviate.classes.config import Configure, Property, DataType\n",
     "import os\n",
-    "headers = {\"X-HuggingFace-Api-Key\":\"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\",}\n",
+    "headers = {\"X-HuggingFace-Api-Key\":HuggingFaceAPI,}\n",
     "client = weaviate.connect_to_weaviate_cloud(cluster_url=URL , auth_credentials=weaviate.auth.AuthApiKey(APIKEY), headers=headers) \n",
     "\n",
     "\n",
@@ -82,7 +100,7 @@
     "from tqdm import tqdm\n",
     "from datetime import datetime, timezone\n",
     "# Instantiate your client (not shown). e.g.:\n",
-    "headers = {\"X-HuggingFace-Api-Key\":\"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\",}\n",
+    "headers = {\"X-HuggingFace-Api-Key\":HuggingFaceAPI,}\n",
     "client = weaviate.connect_to_weaviate_cloud(cluster_url=URL , auth_credentials=weaviate.auth.AuthApiKey(APIKEY), headers=headers) \n",
     "\n",
     "\n",
@@ -172,7 +190,7 @@
     "import weaviate.classes.query as wq\n",
     "import os\n",
     "\n",
-    "headers = {\"X-HuggingFace-Api-Key\":\"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\",}\n",
+    "headers = {\"X-HuggingFace-Api-Key\":HuggingFaceAPI,}\n",
     "client = weaviate.connect_to_weaviate_cloud(cluster_url=URL , auth_credentials=weaviate.auth.AuthApiKey(APIKEY), headers=headers) \n",
     "\n",
     "Quran = client.collections.get(\"Quran_arabert\")\n",
