--- a/ember.ipynb
+++ b/ember.ipynb
@@ -16,8 +16,12 @@
    ],
    "source": [
     "from pinecone import Pinecone\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv()\n",
     "\n",
-    "pc = Pinecone(api_key=\"09783e77-bcef-4448-a649-966eb17480d4\")\n",
+    "Pinecone_Api = os.getenv(\"PINECONE_API_KEY\")\n",
+    "pc = Pinecone(api_key=Pinecone_Api)\n",
     "index = pc.Index(\"mulitlangone\")"
    ]
   },
@@ -90,6 +94,21 @@
     "    namespace=\"ns1\"\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "09783e77-bcef-4448-a649-966eb17480d4\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
